# wither_PM

./: .gitignore  README.md
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 08cac97df86c_add_weather_search_identity_constraint.py  10e6475c2f6f_create_weather_searches.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: ai.py  health.py  searches.py  weather.py
backend/app/core/: config.py  errors.py  exceptions.py
backend/app/db/: session.py
backend/app/models/: __init__.py  weather_search.py
backend/app/repositories/: weather_search_repository.py
backend/app/schemas/: llm.py  parser.py  weather.py  weather_search.py
backend/app/services/: groq_client.py  llm_service.py  openweather_client.py  parser_service.py  weather_search_service.py  weather_service.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/scripts/: build.mjs  dev.mjs  serve.mjs
frontend/src/: App.tsx  api.ts  styles.css  types.ts
